// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PermissionPrompt > snapshots > renders Bash permission correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Permission Request                                                                           │
│                                                                                                  │
│ Tool: Bash                                                                                       │
│ Input: {"command":"npm test"}                                                                    │
│                                                                                                  │
│ ┏━━━━━━━━━┓  ┌────────┐                                                                          │
│ ┃  [Y]es  ┃  │  [N]o  │                                                                          │
│ ┗━━━━━━━━━┛  └────────┘                                                                          │
│                                                                                                  │
│ ←/→ to select • y/n or Enter to confirm                                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`PermissionPrompt > snapshots > renders Write permission correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Permission Request                                                                           │
│                                                                                                  │
│ Tool: Write                                                                                      │
│ Input: {"file_path":"/test.ts"}                                                                  │
│                                                                                                  │
│ ┏━━━━━━━━━┓  ┌────────┐  ┌────────────┐                                                          │
│ ┃  [Y]es  ┃  │  [N]o  │  │  [A]lways  │                                                          │
│ ┗━━━━━━━━━┛  └────────┘  └────────────┘                                                          │
│                                                                                                  │
│ ←/→ to select • y/n/a or Enter to confirm                                                        │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ [A]lways:                                                                                    │ │
│ │ Auto-accept all edit operations for this agent session                                       │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`PermissionPrompt > snapshots > renders globalSettings suggestion correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Permission Request                                                                           │
│                                                                                                  │
│ Tool: Write                                                                                      │
│ Input: {"file_path":"/test/file.ts","content":"test conte                                        │
│                                                                                                  │
│ ┏━━━━━━━━━┓  ┌────────┐  ┌────────────┐  ┌──────────┐                                            │
│ ┃  [Y]es  ┃  │  [N]o  │  │  [A]lways  │  │  [U]ser  │                                            │
│ ┗━━━━━━━━━┛  └────────┘  └────────────┘  └──────────┘                                            │
│                                                                                                  │
│ ←/→ to select • y/n/a/u or Enter to confirm                                                      │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ [A]lways:                                                                                    │ │
│ │ Auto-accept all edit operations for this agent session                                       │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ [U]ser: Save to repo settings (.claude/settings.json)                                        │ │
│ │ • Rule: Write(*)                                                                             │ │
│ │ • Future Write operations will be auto-allowed                                               │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`PermissionPrompt > snapshots > renders permission with queue count correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Permission Request (+5 more pending)                                                         │
│                                                                                                  │
│ Tool: Edit                                                                                       │
│ Input: {"file_path":"/test/file.ts","content":"test conte                                        │
│                                                                                                  │
│ ┏━━━━━━━━━┓  ┌────────┐  ┌────────────┐                                                          │
│ ┃  [Y]es  ┃  │  [N]o  │  │  [A]lways  │                                                          │
│ ┗━━━━━━━━━┛  └────────┘  └────────────┘                                                          │
│                                                                                                  │
│ ←/→ to select • y/n/a or Enter to confirm                                                        │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ [A]lways:                                                                                    │ │
│ │ Auto-accept all edit operations for this agent session                                       │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`PermissionPrompt > snapshots > renders permission with suggestions correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Permission Request                                                                           │
│                                                                                                  │
│ Tool: Write                                                                                      │
│ Input: {"file_path":"/test/file.ts","content":"test conte                                        │
│                                                                                                  │
│ ┏━━━━━━━━━┓  ┌────────┐  ┌────────────┐  ┌──────────┐                                            │
│ ┃  [Y]es  ┃  │  [N]o  │  │  [A]lways  │  │  [R]epo  │                                            │
│ ┗━━━━━━━━━┛  └────────┘  └────────────┘  └──────────┘                                            │
│                                                                                                  │
│ ←/→ to select • y/n/a/r or Enter to confirm                                                      │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ [A]lways:                                                                                    │ │
│ │ Auto-accept all edit operations for this agent session                                       │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ [R]epo: Save to repo settings (.claude/settings.json)                                        │ │
│ │ • Rule: Write(*)                                                                             │ │
│ │ • Future Write operations will be auto-allowed                                               │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
